feat: make sure resource providers are initialized in k8s context